--- a/style.css
+++ b/style.css
@@ -112,10 +112,20 @@ nav ul li .nav-a:hover::after {
   height: 600px;
 }
 
+.slide {
+  /* position: relative; */
+  overflow: hidden;
+}
+
 .corusel {
   display: flex;
   width: 100%;
-  transition: 1.5s;
+  transition: 1s ease-in-out;
+}
+
+.img-slide {
+  width: 100%;
+  height: auto;
 }
 
 .corusel img {
@@ -140,8 +150,20 @@ nav ul li .nav-a:hover::after {
   font-size: 0px;
   border-radius: 50%;
   margin: 3px;
+  /* margin: 0 5px;
+  padding: 5px 10px;
+  border: 1px solid #ccc;
+  text-decoration: none;
+  color: #333;
+  border-radius: 5px; */
   transition: 0.8s;
 }
+
+.active {
+  background-color: #333;
+  color: #fff;
+}
+
 .navigation-corusel a:hover {
   background-color: rgb(254, 100, 254);
   width: 50px;
@@ -421,8 +443,8 @@ nav ul li .nav-a:hover::after {
 }
 
 .card:hover {
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 1);
-  margin: 10px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 1);
+  scale: 1.1;
 }
 
 .card.ada {
@@ -588,6 +610,11 @@ nav ul li .nav-a:hover::after {
   margin-top: auto;
   margin-bottom: auto;
   height: 50px;
+  transition: all 0.5s;
+}
+
+.instagram svg:hover {
+  scale: 1.2;
 }
 
 .instagram {
@@ -633,13 +660,23 @@ nav ul li .nav-a:hover::after {
   height: 50px;
   margin-top: auto;
   margin-bottom: auto;
+  transition: all 0.5s;
 }
+
+.wa1 svg:hover {
+  scale: 1.2;
+}
+
 .wa2 svg {
   padding-right: 5px;
   width: 40px;
   height: 50px;
   margin-top: auto;
   margin-bottom: auto;
+  transition: all 0.5s;
+}
+.wa2 svg:hover {
+  scale: 1.2;
 }
 
 .email {
@@ -659,6 +696,11 @@ nav ul li .nav-a:hover::after {
   padding-right: 5px;
   width: 40px;
   height: 50px;
+  transition: all 0.5s;
+}
+
+.email svg:hover {
+  scale: 1.2;
 }
 
 .a-contact {
