--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ html {
 
 /* for tag body */
 body {
+  width: 100%;
   /* font-family: "DM Sans", sans-serif; */
   /* font-family: "Inter", sans-serif; */
   /* font-family: "Comfortaa", sans-serif; */
@@ -58,6 +59,7 @@ nav ul li a {
   justify-content: space-between;
   text-decoration: none;
   color: var(--text-color);
+  padding-left: 10px;
   margin: auto;
   font-weight: 500;
 }
@@ -69,7 +71,7 @@ nav ul li .nav-a:hover {
   transition: 0.2s linear;
 }
 
-nav ul li .nav-a:after {
+nav ul li .nav-a::after {
   content: "";
   display: block;
   padding-bottom: 3px;
@@ -81,10 +83,25 @@ nav ul li .nav-a:hover::after {
   border-bottom: 0.1rem solid var(--nav-hover);
   transform: scaleX(0.5);
 }
-.cart {
-  width: 20px;
-  height: 20px;
+
+.hamburger-menu {
+  width: 30px;
+  height: 30px;
   margin-left: 20px;
+  fill: white;
+  transition: all 0.5s;
+}
+.hamburger-menu:hover {
+  fill: black;
+}
+
+.nav-hamburger::after {
+  border-bottom: none;
+  transform: none;
+}
+
+#hamburger-menu {
+  display: none;
 }
 
 .logo-nav {
@@ -312,7 +329,6 @@ nav ul li .nav-a:hover::after {
   color: #000;
   text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.783);
   font-size: 50px;
-  border-bottom: 4px solid black;
   width: 160px;
   margin-right: auto;
   margin-left: auto;
@@ -396,7 +412,6 @@ nav ul li .nav-a:hover::after {
   color: #000;
   text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.783);
   font-size: 50px;
-  border-bottom: 4px solid black;
   width: 160px;
   margin-right: auto;
   margin-left: auto;
@@ -541,12 +556,17 @@ nav ul li .nav-a:hover::after {
   cursor: pointer;
 }
 
+.h1-contact span,
+.h1-about span,
+.h1-menu span {
+  border-bottom: 4px solid black;
+}
+
 .h1-contact {
   text-align: center;
   color: #000;
   text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.783);
   font-size: 50px;
-  border-bottom: 4px solid black;
   width: 300px;
   margin-right: auto;
   margin-left: auto;
@@ -596,7 +616,7 @@ nav ul li .nav-a:hover::after {
   padding-left: 30px;
   padding-bottom: 30px;
   opacity: 0;
-  transform: translate(100px, 0);
+  transform: translate(0, -100px);
   transition: all ease-in 0.8s;
 }
 
@@ -621,7 +641,7 @@ nav ul li .nav-a:hover::after {
   padding-left: 20px;
   height: 50px;
   opacity: 0;
-  transform: translate(-100px, 0);
+  transform: translate(100px, 0);
   transition: all ease-in 0.8s;
 }
 
@@ -634,14 +654,14 @@ nav ul li .nav-a:hover::after {
   padding-left: 20px;
   height: 50px;
   opacity: 0;
-  transform: translate(100px, 0);
+  transform: translate(-100px, 0);
   transition: all ease-in 0.8s;
 }
 .wa2 {
   padding-left: 20px;
   height: 50px;
   opacity: 0;
-  transform: translate(-100px, 0);
+  transform: translate(100px, 0);
   transition: all ease-in 0.8s;
 }
 
@@ -683,7 +703,7 @@ nav ul li .nav-a:hover::after {
   padding-left: 20px;
   height: 50px;
   opacity: 0;
-  transform: translate(100px, 0);
+  transform: translate(-100px, 0);
   transition: all ease-in 0.8s;
 }
 
@@ -824,4 +844,244 @@ footer {
   padding-bottom: auto;
   font-weight: 500;
   padding: 10px;
+}
+
+/* Media Queries */
+/* Laptop */
+@media (max-width: 1366px) {
+  html {
+    font-size: 100%;
+  }
+}
+
+/* Tablet */
+@media (max-width: 758px) {
+  body {
+    max-width: 100vw;
+  }
+  body {
+    font-size: 120%;
+  }
+
+  nav {
+    width: 100%;
+  }
+
+  .div1 {
+    width: 100%;
+  }
+
+  .nav-text {
+    margin-right: 20px;
+  }
+
+  #hamburger-menu {
+    display: inline-block;
+    margin: auto;
+  }
+
+  #nav-li {
+    display: block;
+    /* flex-direction: column; */
+    position: absolute;
+    top: 100%;
+    padding-top: 10px;
+    font-size: 110%;
+    right: -100%;
+    background-color: var(--navbarcolor);
+    width: 20rem;
+    height: 100vh;
+    transition: 0.3s;
+  }
+
+  #nav-li.ada {
+    font-size: 120%;
+    right: 0;
+  }
+  #nav-li .nav-ada {
+    display: block;
+    padding-bottom: 50px;
+  }
+
+  .nav-a::after {
+    transform-origin: 0 0;
+  }
+  nav ul li .nav-a:hover::after {
+    transform: scaleX(0.2);
+  }
+
+  .nav-a {
+    display: inline-block;
+    width: 100%;
+    padding-bottom: 20px;
+  }
+
+  .container {
+    flex-direction: column;
+  }
+
+  .iframe,
+  .iframe iframe,
+  .paragraph,
+  .about-paragraph,
+  .form {
+    width: 100%;
+  }
+
+  .about-paragraph,
+  .container,
+  .p-about,
+  .logo-nav {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .container {
+    text-align: justify;
+    padding: 15px;
+  }
+
+  .offer {
+    padding-left: 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .btn-offer.ada {
+    margin: auto;
+  }
+
+  .h1-contact,
+  .h1-about,
+  .h1-menu,
+  .about-paragraph {
+    font-size: 25px;
+  }
+
+  .card,
+  .card-place {
+    margin: auto;
+  }
+
+  .card {
+    margin-bottom: 10px;
+  }
+
+  .email {
+    transform: translate(0, 100px);
+  }
+  .wa1 {
+    transform: translate(0, 100px);
+  }
+  .wa2 {
+    transform: translate(0, 100px);
+  }
+  .instagram {
+    transform: translate(0, 100px);
+  }
+  .about-paragraph {
+    transform: translate(0, 100px);
+  }
+
+  .p-about {
+    transform: translate(0, 100px);
+  }
+
+  .email.ada,
+  .wa1.ada,
+  .wa2.ada,
+  .instagram.ada,
+  .about-paragraph.ada,
+  .p-about.ada {
+    transform: translate(0, 0);
+  }
+
+  .form {
+    margin-top: 20px;
+  }
+  .address {
+    padding-top: 50px;
+  }
+
+  .p-address {
+    padding-bottom: 10px;
+  }
+  .footer-text {
+    font-size: 15px;
+  }
+  /* nav ul li a {
+    margin: 0px;
+  }
+
+  .navbar .navbar-nav a {
+    color: var(--bg);
+    display: block;
+    margin: 1.5rem;
+    padding: 0.5rem;
+    font-size: 2rem;
+  }
+
+  .navbar .navbar-nav a::after {
+    transform-origin: 0 0;
+  }
+
+  .navbar .navbar-nav a:hover::after {
+    transform: scaleX(0.2);
+  }
+
+  .navbar .search-form {
+    width: 90%;
+    right: 2rem;
+  }
+
+  .about .row {
+    flex-wrap: wrap;
+  }
+
+  .about .row .about-img img {
+    height: 24rem;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .about .row .content {
+    padding: 0;
+  }
+
+  .about .row .content h3 {
+    margin-top: 1rem;
+    font-size: 2rem;
+  }
+
+  .about .row .content p {
+    font-size: 1.6rem;
+  }
+
+  .menu p {
+    font-size: 1.2rem;
+  }
+
+  .contact .row {
+    flex-wrap: wrap;
+  }
+
+  .contact .row .map {
+    height: 30rem;
+  }
+
+  .contact .row form {
+    padding-top: 0;
+  }
+
+  .modal-content {
+    flex-wrap: wrap;
+  } */
+}
+
+/* Mobile Phone */
+@media (max-width: 450px) {
+  html {
+    font-size: 55%;
+  }
 }
