--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ nav ul li .nav-a:hover::after {
 }
 
 .img-slide {
-  width: 100%;
+  width: 900px;
   height: auto;
 }
 
@@ -869,9 +869,12 @@ footer {
 @media (max-width: 758px) {
   body {
     max-width: 100vw;
-  }
-  body {
     font-size: 120%;
+  }
+
+  .img-slide {
+    width: 100%;
+    height: auto;
   }
 
   nav {
